--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Assignment_1/tokenised_hi.json
+Assignment_1\tokenised_hi.json
 Assignment_1/tokenized_hi.parquet
 Lab3/tokenized_hi.parquet
 # Byte-compiled / optimized / DLL files
